# libmsym

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libmsymConfig.cmake.in
bindings/python/: .gitignore  CMakeLists.txt  README.md  libmsym.py  msympy_context.c  msympy_context.h  msympy_element.c  msympy_element.h  msympymodule.c  setup.py
bindings/python/cmake/: setup.py.in
bindings/python/examples/: msympy_example.py
bindings/python/libmsym/: .gitignore  __init__.py  __init__.py.in  libmsym.py
examples/: CMakeLists.txt  Makefile  example.c  example.h  msym_example.c  tex_character_table.c
src/: basis_function.c  basis_function.h  character_table.c  character_table.h  context.c  context.h  debug.c  debug.h  elements.c  equivalence_set.c  equivalence_set.h  geometry.c  geometry.h  linalg.c  linalg.h  msym.c  msym.h  msym_error.c  msym_error.h  orbital.c  orbital.h  permutation.c  permutation.h  point_group.c  point_group.h  rsh.c  rsh.h  subspace.c  subspace.h  symmetrize.c  symmetrize.h  symmetry.c  symmetry.h  symop.c  symop.h  vibration.c  vibration.h
